cloud-controller/aws/bedrock/guardrails/check-sensitive-information-policy/check-sensitive-information-policy.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-sensitive-information
  labels:
    app: kyverno
spec:
  failureAction: Audit
  matchConditions:
    - name: match-create-update
      expression: >
        request.operation in ['CREATE', 'UPDATE']
    - name: aws-bedrock-guardrail
      expression: >
        object.TypeName == 'AWS::Bedrock::Guardrail'
  validations:
    - expression: >
        has(object.ResourceDescription) ?
        (
          has(object.ResourceDescription.Properties) &&
          has(object.ResourceDescription.Properties.sensitiveInformationPolicyConfig)
        ) :
        (
          has(object.sensitiveInformationPolicyConfig)
        )
      message: "Sensitive information (such as PII) policy should be enabled for a Guardrail"
